# Project_Risk_Management

./: LICENSE  README.md  api.py  main.py  requirements.txt  s3_utils.py
crew_updated/: market_analysis_crew.py
crews/: market_analysis_crew.py  mitigation_strategies_crew.py  project_status_tracking_agent.py  project_status_tracking_crew.py  reporting_crew.py  risk_scoring_crew.py
final_crew/: __init__.py  market_analysis_crew.py  mitigation_strategy_crew.py  overall_risk_analysis_crew.py  project_risk_analysis_crew.py  resource_analysis_crew.py  transaction_risk_analysis_crew.py
flow_example/: README.md  poem.txt  pyproject.toml
flow_example/src/flow_example/: main.py
flow_example/src/flow_example/crews/poem_crew/: poem_crew.py
flow_example/src/flow_example/crews/poem_crew/config/: agents.yaml
output/: mitigation_strategies.txt  overall_project_risk_analysis.txt  project_risk_analysis.txt  report.txt  resource_risk_analysis.txt  transaction_risk_analysis.txt
project_details/: market_analysis_summary.json  project.json  project_description.txt  resource.json  static_rules.json  transaction.json  transaction_risk_analysis.json
project_risk_management/: README.md  pyproject.toml
project_risk_management/src/project_risk_management/: crew.py  main.py
static_db/: market_analysis_summary.json
test/: csv_search_tool.py  csv_search_tool_class.py  mail_test.py  main.py  main1.py  requirements.txt  s3_test.py  s3_test2.py  s3_test3.py  test.ipynb  test.md  test1.py
tools/: rag_tool.py
utils/: mail_utils.py  qdrant_utils.py  rag_utils.py  s3_utils.py
(+5 files in other folders)
