[project]
name = "project_risk_management"
version = "0.1.0"
description = "project_risk_management using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
project_risk_management = "project_risk_management.main:run"
run_crew = "project_risk_management.main:run"
train = "project_risk_management.main:train"
replay = "project_risk_management.main:replay"
test = "project_risk_management.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
